--- a/module3_opdracht3/index.html
+++ b/module3_opdracht3/index.html
@@ -11,7 +11,7 @@
 <img id="antenne" src="assets/images/kisspng-television-antenna-aerials-computer-icons-wellmark-of-south-dakota-inc-5b15d6728c7085.4662768115281578105753.png">
     <div id="container">
         <div id="binnen">
-            <video height="105%" width="100%" controls autoplay muted>
+            <video height="105%" width="100%" autoplay muted>
                 <source id="vic" src="assets/videos/yt5s.io-Big Time Rush _ La sigla _ Nickelodeon Italia.mp4">
             </video>
         </div>
