--- a/module3_opdracht4/index.html
+++ b/module3_opdracht4/index.html
@@ -12,9 +12,9 @@
     <div id="container">
         <div id="aside">Aside</div>
         <div id="main">Main
-            <div id="article"></div>
-            <div id="articletwee">Article</div>
-            <div id="articledrie"></div>
+            <div id="article"><img src="assets/images/folk.webp" style="width:100%" height="100%"></div>
+            <div id="articletwee"><img src="assets/images/folkk.png" style="width:100%" height="100%">Article</div>
+            <div id="articledrie"><img src="assets/images/folkkk.png" style="width:100%" height="100%"></div>
         </div>
     </div>
     <div id="footer">Footer</div>
